# poetry-azure-artifacts-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: publish.yml  test.yml
poetry-azure-artifacts-plugin/: plugin.py
poetry_azure_artifacts_plugin/: plugin.py
scripts/: get_poetry_versions.py
testproject/: pyproject.toml
