[tool.poetry]
    name         = "poetry-azure-artifacts-plugin"
    version      = "0.1.0"
    description  = "Poetry plugin to handle Azure Artifacts authentication"
    license      = "MIT"
    readme       = "README.md"
    authors      = ["Nathan Vaughn <nathn@nvaughn.email>"]
    homepage     = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin"
    repository   = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin.git"
    package-mode = false

[tool.poetry.urls]
    Issues = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin/issues"

[tool.poetry.dependencies]
    python            = "^3.12"
    artifacts-keyring = "^0.3.6"
    poetry            = "^1.8.3"

[tool.poetry.group.dev.dependencies]
    pre-commit = "3.8.0"

[tool.coverage.run]
    omit = ["tests/*"]

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
