[project]
    name = "poetry-azure-artifacts-plugin"
    version = "0.2.0"
    description = "Poetry plugin to handle Azure Artifacts authentication"
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    classifiers = [
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Text Processing",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    requires-python = ">=3.10"
    dependencies = [
        # https://github.com/python-poetry/poetry/blob/main/pyproject.toml#L32
        "artifacts-keyring>=0.3.6",
        "poetry>=1.8.0",
    ]

[dependency-groups]
    dev = [
        "prek>=0.4.5",
        "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
    Homepage   = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin"
    Repository = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin.git"
    Issues     = "https://github.com/NathanVaughn/poetry-azure-artifacts-plugin/issues"

[tool.poetry.plugins."poetry.plugin"]
    poetry-azure-artifacts-plugin = "poetry_azure_artifacts_plugin.plugin:AzureArtifactsPlugin"

[tool.coverage.run]
    omit = ["tests/*"]

[tool.uv.build-backend]
    module-root = ""

[build-system]
    requires      = ["uv_build>=0.7.15,<0.12"]
    build-backend = "uv_build"
