[project]
    name = "testproject"
    version = "0.1.0"
    description = ""
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.9"
    dependencies = [
        "requests>=2.32.3",
    ]

[tool.poetry]
name = "testproject"
version = "0.1.0"
description = ""
authors = ["Nathan Vaughn <nath@nvaughn.email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
